# HW_WEB_07

./: config.ini  my_select.py  pyproject.toml
conf/: db.py
migration/versions/: db51dc325ce9_init.py
seeds/: seed.py
